--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@
   --text-dim: #8c8fa8;
   --text-muted: #4a4d65;
   --code-bg: #0b0c14;
-  --font-display: 'Syne', sans-serif;
+  --font-display: "Bpmf Huninn", sans-serif;
   --font-mono: 'JetBrains Mono', monospace;
   --radius: 10px;
 }
